<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.MainMenuActivity"
    android:background="@color/white">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/mainColor"
        app:menu="@menu/menu_top"
        app:titleTextColor="@color/white"
        app:title="@string/app_name">
    </com.google.android.material.appbar.MaterialToolbar>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/main_appbar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            android:background="@color/white">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/main_collapsing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/white"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleMarginEnd="64dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/images_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_default"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_image_default"
                        android:tint="@color/mainColor"
                        android:visibility="gone"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/linear_add_image"/>
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/linear_add_image"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/img_default"
                        app:layout_constraintEnd_toEndOf="parent">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_download"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:layout_gravity="end|center_vertical"
                            android:fitsSystemWindows="true"
                            android:scaleType="fitCenter"
                            android:backgroundTint="@color/white"
                            android:src="@drawable/ic_download"
                            app:tint="@color/mainColor" />
                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_add_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/mainColor"
                            android:text="@string/add_image"
                            android:textSize="18sp"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:background="@drawable/background_main">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_calendat"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_calendar"
                        android:scaleType="fitCenter"
                        android:tint="@color/mainColor"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:text="Jan 10, 2000"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/test"
                    android:textStyle="italic"
                    android:padding="10dp"
                    android:textColor="@color/black"/>
            </LinearLayout>


        </androidx.core.widget.NestedScrollView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/b_prev_day"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_back"
            android:scaleType="fitCenter"
            app:maxImageSize="50dp"
            app:backgroundTint="@color/mainColor"
            android:backgroundTint="@color/white"
            app:tint="@color/mainColor"
            app:borderWidth="2dp"
            app:layout_anchor="@id/main_appbar"
            app:layout_anchorGravity="bottom|left|start"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/b_mind_record"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_foreground"
            android:scaleType="center"
            app:maxImageSize="50dp"
            app:backgroundTint="@color/mainColor"
            app:tint="@color/white"
            app:layout_anchor="@id/nested_scroll"
            app:layout_anchorGravity="top|center_horizontal"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/b_next_day"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            app:maxImageSize="50dp"
            android:src="@drawable/ic_arrow_forward"
            android:scaleType="fitCenter"
            android:backgroundTint="@color/white"
            app:backgroundTint="@color/mainColor"
            app:tint="@color/mainColor"
            app:borderWidth="2dp"
            app:layout_anchor="@id/main_appbar"
            app:layout_anchorGravity="bottom|right|end"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>